--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   hijri: ^3.0.0
   intl: ^0.19.0
   lucide_icons: ^0.257.0
+  shared_preferences: ^2.3.3
   timezone: 0.9.4
 
 dev_dependencies:
