--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_local_notifications: ^18.0.0
+  flutter_native_splash: ^2.4.2
   flutter_riverpod: ^2.6.1
   geocoding: ^3.0.0
   geolocator: ^13.0.1
@@ -40,6 +41,7 @@ dependencies:
   hijri: ^3.0.0
   intl: ^0.19.0
   lucide_icons: ^0.257.0
+  permission_handler: ^11.3.1
   shared_preferences: ^2.3.3
   timezone: 0.9.4
 
@@ -47,6 +49,28 @@ dev_dependencies:
   flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.14.1
+
+# Flutter Native Splash Screen Configuration
+flutter_native_splash:
+  color: "#FFFFFF"
+  color_dark: "#121212"
+  image: assets/splash/splash.png
+  image_dark: assets/splash/splash_dark.png
+  android_12:
+    image: assets/splash/splash_android12.png
+    icon_background_color: "#FFFFFF"
+    icon_background_color_dark: "#001d21"
+  web: false
+
+# Flutter Launcher Icons Configuration
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/icon.png"
+  min_sdk_android: 21
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: "assets/icon/icon_foreground.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -57,9 +81,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/icon/
+    - assets/splash/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
   # For details regarding adding assets from package dependencies, see
