--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,17 +39,19 @@ dependencies:
   geolocator: ^13.0.1
   google_fonts: ^6.2.1
   hijri: ^3.0.0
+  http: ^1.2.2
   intl: ^0.19.0
+  logger: ^2.4.0
   lucide_icons: ^0.257.0
   permission_handler: ^11.3.1
   shared_preferences: ^2.3.3
   timezone: 0.9.4
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.14.1
   flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.14.1
 
 # Flutter Native Splash Screen Configuration
 flutter_native_splash:
